2006-08-13  Alexander E. Patrakov  <patrakov@ums.usu.ru>  (tiny change)

	* info/man.c (get_manpage_contents), info/info.c (main):
	Info apparently assumes equivalence of bytes and characters,
	leading to (for example) translated man output in multibyte
	locales being broken within a character.  In lieu of a
	real fix, if MB_CUR_MAX > 1, revert to C.  bug-texinfo mail, 
	07 Aug 2006 14:59:42 +0600.

2006-08-12  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (error \box0): smaller font.

2006-08-08  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Invoking Macros): all commas inside macro calls
	are quoted, it seems.  From Patrice.

2006-07-25  Karl Berry  <karl@gnu.org>

	* configure.ac (AC_MINIX): remove, as it seems there is nowhere to
	call it, and is it really necessary these days?

	* doc/info-stnd.texi (What is Info?): suggest the Emacs Info
	reader for the nicest display.

2006-07-16  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\onepageout): hardwire a 24pt space before
	\footlinebox, instead of 2\baselineskip.  If the page break occurs
	at a heading, for instance, \baselineskip might be larger, causing
	the footer to jump.
	(\oddfootingyyy): likewise (although doesn't really matter here).
	Report from Werner Lemberg, 02 Jun 2006 07:44:36 +0200.

	* doc/texinfo.txi: use @copyright{} in @copying, not (C).

2006-07-15  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\code): make ' active.
	(@lisp,@example): call \quoteexpand.
	(\quoteexpand): new definition to make ' active.
	(\singlequotechar): the active definition of '; if
	the variable codequoteundirected is @set, use char"d from tt
	instead of the regular directed quote.
	This is all to make pasting of ' in examples work in more pdf
	viewers, at least evince.
	From: Han-Wen Nienhuys, 2 Jun 2006 01:22:44 +0000.

2006-07-10  <Ralf.Wildenhues@gmx.de>

	* makeinfo/html.c (insert_html_tag_with_attribute): Treat `samp'
	special, to allow it to nest.